--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: flexy
 
 # Feed configuration
 feed:
@@ -77,3 +77,4 @@ deploy:
   type: git
   repo: https://github.com/philipproplesch/blog.git
   branch: gh-pages
+  
